--- a/app/src/main/res/layout/activity_new_screen.xml
+++ b/app/src/main/res/layout/activity_new_screen.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Second screen"
+        android:text="@string/second_screen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
